# locately

./: .gitignore  LICENSE.md  README.md
locately-app/: App.js  app.json  metro.config.js  package.json
locately-server/: Cargo.toml
locately-server/migrations/2023-05-20-160309_create_users/: up.sql
locately-server/migrations/2023-05-20-162108_index_email_user/: down.sql
locately-server/src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs  scopes.rs
locately-server/src/auth/: mod.rs
locately-server/src/db/: mod.rs  user.rs
locately-server/src/models/: mod.rs  user.rs
locately-server/src/scopes/: auth.rs  mod.rs
locately-server/src/scopes/auth/: login_handler.rs  register_handler.rs
scripts/hooks/: hooks-setup.sh  pre-push
