[package]
name = "locately-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
nanoid = "0.4.0"
diesel = { version = "2.0.0", features = ["mysql"] }
bcrypt = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
validator = { version = "0.15", features = ["derive"] }
derive_more = "0.99.17"